# mekong-cli

./: .cursorrules  .dockerignore  .editorconfig  .env.api.example  .env.bak  .env.domain  .env.example  .env.production.example  .env.production.template  .env.unified  .flake8  .geminiignore  .gitignore  .gitmodules  .openclaw-config.json  .pre-commit-config.yaml  .ruffignore  .vercel-trigger  .vercelignore  .warp_config.json  AGENTS.md  ANTIGRAVITYKIT_README.md  ARCHITECTURE.md  AgencyOS_Facebook_Post.txt  BACKEND_REFACTORING_REPORT.md  CHANGELOG-TOOLS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude_Agent_Teams_Post.txt  DEPLOYMENT.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  FREE_ASSETS_CATALOG.md  GEMINI.md  GO_LIVE_REPORT.md  HEARTBEAT.md  HIEN-PHAP-ROIAAS.md  HUONG-DAN-SU-DUNG-v0.3.md  (+96 more)
apps/api/: .gitignore  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260206_120000_initial_schema.py
apps/api/src/: config.py  database.py  main.py  models.py  schemas.py  services.py
apps/api/src/routers/: health.py  ledger.py  payments.py  webhooks.py
apps/api/src/services/: payment_service.py
apps/api/tests/: conftest.py  test_ledger.py  test_stripe.py
products/paid/api-rate-limiter-kit/backend/: Dockerfile  pyproject.toml  requirements.txt
products/paid/api-rate-limiter-kit/backend/app/: main.py
products/paid/api-rate-limiter-kit/backend/app/api/: rules.py  stats.py
products/paid/api-rate-limiter-kit/backend/app/core/: config.py  redis.py
products/paid/api-rate-limiter-kit/backend/app/limiter/: core.py  dependency.py  scripts.py
products/paid/api-rate-limiter-kit/backend/app/middleware/: rate_limit.py
products/paid/api-rate-limiter-kit/backend/app/models/: rule.py
products/paid/api-rate-limiter-kit/backend/app/services/: rule_service.py
products/paid/api-rate-limiter-kit/backend/tests/: conftest.py  test_api.py  test_limiter.py  test_middleware.py
products/paid/changelog-kit/backend/: Dockerfile  pyproject.toml
products/paid/changelog-kit/backend/app/: main.py  models.py
products/paid/changelog-kit/backend/app/api/: endpoints.py
products/paid/changelog-kit/backend/app/core/: config.py
products/paid/changelog-kit/backend/app/services/: feed.py  parser.py
products/paid/database-migration-kit/: INSTALL.md  MIGRATION_GUIDE.md  README.md  ROLLBACK_GUIDE.md  SALES_COPY.md  pyproject.toml
products/paid/database-migration-kit/examples/mysql/: 001_create_users.py
products/paid/database-migration-kit/examples/postgres/: 001_create_products.py
products/paid/database-migration-kit/examples/sqlite/: 001_create_settings.py
products/paid/database-migration-kit/src/migration_kit/: config.py  main.py  utils.py
products/paid/database-migration-kit/src/migration_kit/adapters/: base.py  impl.py
products/paid/database-migration-kit/src/migration_kit/core/: engine.py  registry.py
products/paid/database-migration-kit/tests/: conftest.py  test_integration.py
products/paid/email-marketing-kit/: .env.example  API.md  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FINAL_SUMMARY.md  GUMROAD_LISTING.md  INSTALL.md  Makefile  README.md  RESEND_SETUP.md  SECURITY.md  SECURITY_FIXES.md  SENDGRID_SETUP.md  STATUS_REPORT.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
products/paid/email-marketing-kit/alembic/: env.py
products/paid/email-marketing-kit/alembic/versions/: 1a2b3c4d5e6f_initial_schema_and_drips.py  2b3c4d5e6f7g_add_segmentation.py
products/paid/email-marketing-kit/app/: main.py  worker.py
products/paid/email-marketing-kit/app/api/: api.py
products/paid/email-marketing-kit/app/api/endpoints/: campaigns.py  (+5 more)
products/paid/email-marketing-kit/app/core/: config.py  database.py  security.py  unsubscribe_token.py
products/paid/email-marketing-kit/app/models/: apikey.py  campaign.py  config.py  drip.py  subscriber.py  template.py
products/paid/email-marketing-kit/app/providers/: base.py  resend.py  sendgrid.py  ses.py  smtp.py
products/paid/email-marketing-kit/app/schemas/: campaign.py  drip.py  subscriber.py  template.py
products/paid/email-marketing-kit/app/services/: dispatcher.py  drip_service.py  segmentation.py  template.py
products/paid/email-marketing-kit/app/utils/: dns.py
products/paid/email-marketing-kit/examples/frontend/: subscription_form.html
products/paid/email-marketing-kit/frontend/: index.html  package.json  vite.config.ts
products/paid/email-marketing-kit/frontend/src/: App.tsx
products/paid/email-marketing-kit/plans/260126-1033-email-marketing-kit/: architecture.md  compliance_security.md  phase-01-foundation.md  phase-02-template-engine.md  phase-03-list-management.md  phase-04-analytics-engine.md  phase-05-newsletter-automation.md  phase-06-api-integration.md  phase-07-packaging.md  plan.md
products/paid/email-marketing-kit/scripts/: create_key.py  seed.py  seed_templates.py
products/paid/email-marketing-kit/tests/: conftest.py  test_api.py  test_campaigns.py  test_dispatcher.py  test_email_kit.py  test_providers.py  test_services.py  test_subscribers.py  test_templates.py  test_tracking.py  test_worker.py
products/paid/feature-flags-kit/backend/: pyproject.toml  requirements.txt
products/paid/feature-flags-kit/backend/app/: main.py
products/paid/feedback-widget-kit/backend/: .env.example  Dockerfile  alembic.ini  feedback.db  pyproject.toml  test_results.txt
products/paid/feedback-widget-kit/backend/alembic/: env.py  script.py.mako
products/paid/feedback-widget-kit/backend/app/: api.py  database.py  main.py  models.py  schemas.py  security.py
products/paid/feedback-widget-kit/backend/tests/: conftest.py  test_api.py  test_security.py
products/paid/subscription-wrapper/licensing/server/: main.py  models.py  pyproject.toml
products/paid/webhook-manager-kit/backend/: pyproject.toml
products/paid/webhook-manager-kit/backend/app/: main.py  worker.py
products/paid/webhook-manager-kit/backend/tests/: test_api.py  test_verification.py
(+11587 files in other folders)
