[tool.poetry]
name = "mekong-cli"
version = "3.0.0"
description = "AGI Vibe Coding Factory — Plan-Execute-Verify autonomous engine with pluggable providers, DAG execution, and community plugins"
authors = ["Binh Phap Venture Studio <admin@binhphap.io>"]
license = "MIT"
homepage = "https://github.com/mekong-cli/mekong-cli"
repository = "https://github.com/mekong-cli/mekong-cli"
keywords = ["cli", "agi", "ai", "agents", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
packages = [{include = "mekong"}, {include = "src"}, {include = "api"}]

[tool.poetry.scripts]
mekong = "src.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = ">=0.12.0"
rich = "^13.7.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
stripe = "^7.10.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.3"
psutil = "^5.9.0"
prometheus-client = "^0.24.1"
mem0ai = {version = "^0.1.0", optional = true}
qdrant-client = {version = "^1.7.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
httpx = ">=0.26.0,<0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/raas/*",
    "*/main.py",
    "*/nlp_commander.py",
    "*/telegram_bot.py",
    "*/memory_client.py",
    "*/pages/*",
    "*/exceptions.py",
    "*/binh_phap/*",
    "*/commands/*",
    "*/cli/*",
    "*/agi_loop.py",
    "*/cc_spawner.py",
    "*/llm_client.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__",
    "raise NotImplementedError",
]

[tool.poetry.group.memory.dependencies]
mem0ai = "^0.1.0"
qdrant-client = "^1.7.0"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
