[tool.poetry]
name = "mekong-cli"
version = "5.0.0"
description = "AI-operated business platform — 289 commands, universal LLM, 4-layer deploy"
authors = ["Binh Phap Venture Studio <admin@binhphap.io>"]
license = "MIT"
homepage = "https://github.com/mekong-cli/mekong-cli"
repository = "https://github.com/mekong-cli/mekong-cli"
keywords = ["cli", "agi", "ai", "agents", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
mekong = "src.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = ">=0.12.0"
rich = "^13.7.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
email-validator = "^2.1.0"
stripe = "^7.10.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
anthropic = ">=0.40.0"
psutil = "^5.9.0"
mem0ai = {version = "^0.1.0", optional = true}
qdrant-client = {version = "^1.7.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
types-requests = "^2.31.0"
types-PyYAML = "^6.0.0"
httpx = ">=0.26.0,<0.28.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.0.0"
pyinstaller-hooks-contrib = "^2024.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Only scan mekong-cli core tests, not entire monorepo
testpaths = ["tests"]
# Exclude monorepo subdirectories that have their own tests
norecursedirs = [
    "node_modules",
    ".archive",
    "apps",
    "packages",
    "vendor",
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "apps/sophia-proposal/.claude/",
    "apps/*/.claude/skills/",
    ".claude/skills/",
    "mekong/skills/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/raas/*",
    "*/main.py",
    "*/nlp_commander.py",
    "*/telegram_bot.py",
    "*/memory_client.py",
    "*/pages/*",
    "*/exceptions.py",
    "*/binh_phap/*",
    "*/commands/*",
    "*/cli/*",
    "*/agi_loop.py",
    "*/cc_spawner.py",
    "*/llm_client.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__",
    "raise NotImplementedError",
]


[tool.poetry.group.memory.dependencies]
mem0ai = "^0.1.0"
qdrant-client = "^1.7.0"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
