[tool.poetry]
name = "email-marketing-kit"
version = "0.1.0"
description = "A robust, self-hosted email marketing and automation platform."
authors = ["Antigravity <hello@antigravity.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
aiosmtplib = "^3.0.1"
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
dnspython = "^2.4.2"
beautifulsoup4 = "^4.12.3"
aioboto3 = "^12.3.0"
httpx = "^0.26.0"
redis = "^5.0.1"
arq = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.14"
mypy = "^1.8.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
