[tool.poetry]
name = "api-rate-limiter-backend"
version = "0.1.0"
description = "FastAPI backend for Rate Limiter Kit"
authors = ["BillMentor <billwill.mentor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
