[tool.poetry]
name = "feature-flags-backend"
version = "0.1.0"
description = "Backend for Feature Flags Kit"
authors = ["BillMentor <billwill.mentor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
